--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "express": "^4.19.2",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.6.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
